--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,22 @@
 <head>
   <title>Movies</title>
+  <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
-<h1>Movie Surfer</h1>
+<body>
+  <header>
+    <div class="logo">
+      <h2>Movie Surfer</h2>
+    </div>
+
+    <div class="menu">
+      <ul>
+        <li>Home</li>
+        <li>Blog</li>
+      </ul>
+    </div>
+  </header>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
 
@@ -22,3 +36,5 @@
       valueNames: ['title']
     });
   </script>
+
+  </body>
